[package]
name = "tinyvec"
description = "Just, really the littlest Vec you could need. So smol."
version = "0.4.0-alpha.3"
authors = ["Lokathor <zefria@gmail.com>"]
edition = "2018"
license = "Zlib OR Apache-2.0 OR MIT"
keywords = ["vec", "no_std", "no-std", "smol"]
categories = ["data-structures", "no-std"]
repository = "https://github.com/Lokathor/tinyvec"

[dependencies]
# not even std!

[features]
default = []

# Provide things that utilize the `alloc` crate, namely `TinyVec`.
alloc = []

# (not part of Vec!) Extra methods to let you grab the slice of memory after the
# "active" portion of an `ArrayVec` or `SliceVec`.
grab_spare_slice = []

# allow use of nightly feature `slice_partition_dedup`,
# will become useless once that is stabilized:
# https://github.com/rust-lang/rust/issues/54279
nightly_slice_partition_dedup = []

# use const generics for arrays
nightly_const_generics = []

# EXPERIMENTAL: Not part of SemVer. It adds `core::fmt::Write` to `ArrayVec`
# and `SliceVec`. It works on Stable Rust, but Vec normally supports the
# `std::io::Write` trait instead of `core::fmt::Write`, so we're keeping it as
# an experimental impl only for now.
experimental_write_impl = []

# EXPERIMENTAL: Not part of SemVer. This adds an "ArraySet" type which is
# an array backed set type for situations where you need a set of a known
# small size without allocation.
experimental_array_set = []

[badges]
appveyor = { repository = "Lokathor/tinyvec" }
travis-ci = { repository = "Lokathor/tinyvec" }

[package.metadata.docs.rs]
all-features = true

[profile.test]
opt-level = 3

[workspace]
members = ["fuzz"]

[dev-dependencies]
criterion = "0.3.0"

[[test]]
name = "tinyvec"
required-features = ["alloc"]

[[bench]]
name = "macros"
harness = false
required-features = ["alloc"]
