[package]
name = "tinyvec-fuzz"
version = "0.1.0"
authors = []
edition = "2018"
publish = false

[dependencies]
tinyvec = { path = "..", features = ["alloc", "nightly_slice_partition_dedup"] }
arbitrary-model-tests = { package = "rutenspitz", git = "https://github.com/jakubadamw/rutenspitz" }
honggfuzz = "0.5.45"
arbitrary = "0.2.0"
better-panic = "0.2.0"
derive_arbitrary = "0.2.0"
